@@ -1,6 +1,7 @@
 
 Version 1.7  2008-08-25
   * opt: change fopen to syscall open
+  * Makefile add compile flag -D_FILE_OFFSET_BITS=64 to support large files
 
 Version 1.6  2008-08-24
   * add restart daemon shell script: restart.sh
